# spond_bot

./: .gitignore  Cargo.toml  README.md
src/: accept_event.rs  accurate_sleep.rs  discord_message.rs  get_member_by_id.rs  get_next_event.rs  main.rs  update_events.rs
src/structs/: config.rs  get_member_by_id.rs  mod.rs
