[package]
name = "spond_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_derive = "1.0.197"
chrono = "0.4.37"
os_info = "3.0"
toml = "0.8.12"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"


[target.'cfg(target_arch = "aarch64")']
rustflags = ["-C", "target-cpu=native"]


[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-musl-gcc"

[profile.release]
opt-level = 3  # Maximum optimization
lto = true  # Enable Link Time Optimization
codegen-units = 1  # May improve optimizations at the cost of compile time
